tests/neg/magic-offset-header-f.scala
import language.strictEquality

class Foo
class Bar

def test2 = new Foo == new Bar // error
